adding popup for languages and fix styles

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer" data-scroll-section>
 	<div class="container">
 		<div class="footer__box">
-			<div class="footer__inner">
+			<!-- <div class="footer__inner">
 				<h5 class="footer__title">About</h5>
 				<ul class="footer__list">
 					<li class="footer__item">
@@ -11,7 +11,7 @@
 						<a href="#" class="footer__item-link">Technology</a>
 					</li>
 				</ul>
-			</div>
+			</div> -->
 			<div class="footer__inner">
 				<h5 class="footer__title">Support</h5>
 				<ul class="footer__list">
