--- a/src/html/plan.html
+++ b/src/html/plan.html
@@ -41,8 +41,10 @@
 					subscrible
 				</button>
 			</div>
-			<p class="plan__subscrible-txt">Service provides tariff plans and payment methods for some countries.</p>
-			<p class="plan__subscrible-txt">Sign in and find out more</p>
+			<div class="plan__subscrible-txt">
+				<p>Visa, Mastercard, American Express, Google Pay, Apple Pay, Paysafecard and many more payment options available.</p>
+			<p>Sign up or log in to earn more</p>
+			</div>
 		</div>
 	</div>
 
