--- a/src/html/secondPages/articlePost.html
+++ b/src/html/secondPages/articlePost.html
@@ -19,7 +19,7 @@
 		<div class="article-post__head">
 			<div class="article-post__content">
 				<div class="article-post__tag">
-					<p class="border-radius-gradient tag">gaming</p>
+					<a href="#" class="border-radius-gradient tag">gaming</a>
 				</div>
 				<div class="article-post__name">
 					<h1 class="article-post__title">Boosteroid August News/</h1>
@@ -52,10 +52,10 @@
 				</ul>
 				<div class="article-post__footer">
 					<div class="article-post__footer-tags">
-						<p class="border-radius-gradient tag">gaming</p>
-						<p class="border-radius-gradient tag">action</p>
-						<p class="border-radius-gradient tag">STRATEGY</p>
-						<p class="border-radius-gradient tag">EPIC GAMES STORE</p>
+						<a href="#" class="border-radius-gradient tag">gaming</a>
+						<a href="#" class="border-radius-gradient tag">action</a>
+						<a href="#" class="border-radius-gradient tag">STRATEGY</a>
+						<a href="#" class="border-radius-gradient tag">EPIC GAMES STORE</a>
 					</div>
 					<div class="article-post__footer-social">
 						<span>share:</span>
@@ -84,7 +84,7 @@
 							</a>
 							<div class="post__box">
 								<div class="post__tag">
-									<p class="post__tag-category border-radius-gradient">gaming</p>
+									<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 								</div>
 								<a class="post__inner" href="#">
 									<h2 class="post__title">Boosteroid August News</h2>
@@ -104,7 +104,7 @@
 							</a>
 							<div class="post__box">
 								<div class="post__tag">
-									<p class="post__tag-category border-radius-gradient">gaming</p>
+									<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 								</div>
 								<a class="post__inner" href="#">
 									<h2 class="post__title">Boosteroid August News</h2>
@@ -124,7 +124,7 @@
 							</a>
 							<div class="post__box">
 								<div class="post__tag">
-									<p class="post__tag-category border-radius-gradient">gaming</p>
+									<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 								</div>
 								<a class="post__inner" href="#">
 									<h2 class="post__title">Boosteroid August News</h2>
@@ -191,7 +191,7 @@
 				<h3 class="article-post-title article-post__aside-title">The Latest</h3>
 				<div class="article-post__aside-post aside-post">
 					<div class="aside-post__tag">
-						<p class="border-radius-gradient tag">update</p>
+						<a href="#" class="border-radius-gradient tag">update</a>
 					</div>
 					<a href="#" class="aside-post__content">
 						<h2 class="aside-post__content-title">What Happened In July?</h2>
@@ -207,7 +207,7 @@
 				</div>
 				<div class="article-post__aside-post aside-post">
 					<div class="aside-post__tag">
-						<p class="border-radius-gradient tag">STRATEGY</p>
+						<a href="#" class="border-radius-gradient tag">STRATEGY</a>
 					</div>
 					<a href="#" class="aside-post__content">
 						<h2 class="aside-post__content-title">What Happened In July?</h2>
@@ -223,7 +223,7 @@
 				</div>
 				<div class="article-post__aside-post aside-post">
 					<div class="aside-post__tag">
-						<p class="border-radius-gradient tag">update</p>
+						<a href="#" class="border-radius-gradient tag">update</a>
 					</div>
 					<a href="#" class="aside-post__content">
 						<h2 class="aside-post__content-title">What Happened In July?</h2>
@@ -239,7 +239,7 @@
 				</div>
 				<div class="article-post__aside-post aside-post">
 					<div class="aside-post__tag">
-						<p class="border-radius-gradient tag">EPIC GAMES STORE</p>
+						<a href="#" class="border-radius-gradient tag">EPIC GAMES STORE</a>
 					</div>
 					<a href="#" class="aside-post__content">
 						<h2 class="aside-post__content-title">What Happened In July?</h2>
