--- a/src/html/secondPages/blog.html
+++ b/src/html/secondPages/blog.html
@@ -18,7 +18,7 @@
 					</a>
 					<div class="post__box blog__post-box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">gaming</p>
+							<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 						</div>
 						<a class="post__inner blog__post-inner" href="../article/index.html">
 							<h2 class="post__title blog__post-title">Boosteroid August News</h2>
@@ -38,7 +38,7 @@
 					</a>
 					<div class="post__box blog__post-box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">update</p>
+							<a href="#" class="post__tag-category border-radius-gradient">update</a>
 						</div>
 						<a class="post__inner blog__post-inner" href="#">
 							<h2 class="post__title blog__post-title">Boosteroid August News</h2>
@@ -59,7 +59,7 @@
 					</a>
 					<div class="post__box blog__post-box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">epic game store</p>
+							<a href="#" class="post__tag-category border-radius-gradient">epic game store</a>
 						</div>
 						<a class="post__inner blog__post-inner" href="#">
 							<h2 class="post__title blog__post-title">Top-4 Reason</h2>
@@ -79,7 +79,7 @@
 					</a>
 					<div class="post__box blog__post-box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">gaming</p>
+							<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 						</div>
 						<a class="post__inner blog__post-inner" href="#">
 							<h2 class="post__title blog__post-title">Boosteroid August News</h2>
@@ -99,7 +99,7 @@
 					</a>
 					<div class="post__box blog__post-box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">update</p>
+							<a href="#" class="post__tag-category border-radius-gradient">update</a>
 						</div>
 						<a class="post__inner blog__post-inner" href="#">
 							<h2 class="post__title blog__post-title">Boosteroid August News</h2>
@@ -120,7 +120,7 @@
 					</a>
 					<div class="post__box blog__post-box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">epic game store</p>
+							<a href="#" class="post__tag-category border-radius-gradient">epic game store</a>
 						</div>
 						<a class="post__inner blog__post-inner" href="#">
 							<h2 class="post__title blog__post-title">Top-4 Reason</h2>
@@ -140,7 +140,7 @@
 					</a>
 					<div class="post__box blog__post-box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">gaming</p>
+							<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 						</div>
 						<a class="post__inner blog__post-inner" href="#">
 							<h2 class="post__title blog__post-title">Boosteroid August News</h2>
@@ -160,7 +160,7 @@
 					</a>
 					<div class="post__box blog__post-box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">update</p>
+							<a href="#" class="post__tag-category border-radius-gradient">update</a>
 						</div>
 						<a class="post__inner blog__post-inner" href="#">
 							<h2 class="post__title blog__post-title">Boosteroid August News</h2>
@@ -181,7 +181,7 @@
 					</a>
 					<div class="post__box blog__post-box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">epic game store</p>
+							<a href="#" class="post__tag-category border-radius-gradient">epic game store</a>
 						</div>
 						<a class="post__inner blog__post-inner" href="#">
 							<h2 class="post__title blog__post-title">Top-4 Reason</h2>
