--- a/src/html/secondPages/filterPost.html
+++ b/src/html/secondPages/filterPost.html
@@ -21,7 +21,7 @@
 					</a>
 					<div class="post__box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">gaming</p>
+							<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 						</div>
 						<a class="post__inner" href="../article/index.html">
 							<h2 class="post__title">Boosteroid August News</h2>
@@ -41,7 +41,7 @@
 					</a>
 					<div class="post__box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">gaming</p>
+							<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 						</div>
 						<a class="post__inner" href="#">
 							<h2 class="post__title">Boosteroid August News</h2>
@@ -61,7 +61,7 @@
 					</a>
 					<div class="post__box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">gaming</p>
+							<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 						</div>
 						<a class="post__inner" href="#">
 							<h2 class="post__title">Boosteroid August News</h2>
@@ -81,7 +81,7 @@
 					</a>
 					<div class="post__box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">gaming</p>
+							<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 						</div>
 						<a class="post__inner" href="#">
 							<h2 class="post__title">Boosteroid August News</h2>
@@ -101,7 +101,7 @@
 					</a>
 					<div class="post__box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">gaming</p>
+							<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 						</div>
 						<a class="post__inner" href="#">
 							<h2 class="post__title">Boosteroid August News</h2>
@@ -121,7 +121,7 @@
 					</a>
 					<div class="post__box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">gaming</p>
+							<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 						</div>
 						<a class="post__inner" href="#">
 							<h2 class="post__title">Boosteroid August News</h2>
@@ -141,7 +141,7 @@
 					</a>
 					<div class="post__box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">gaming</p>
+							<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 						</div>
 						<a class="post__inner" href="#">
 							<h2 class="post__title">Boosteroid August News</h2>
@@ -161,7 +161,7 @@
 					</a>
 					<div class="post__box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">gaming</p>
+							<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 						</div>
 						<a class="post__inner" href="#">
 							<h2 class="post__title">Boosteroid August News</h2>
@@ -181,7 +181,7 @@
 					</a>
 					<div class="post__box">
 						<div class="post__tag">
-							<p class="post__tag-category border-radius-gradient">gaming</p>
+							<a href="#" class="post__tag-category border-radius-gradient">gaming</a>
 						</div>
 						<a class="post__inner" href="#">
 							<h2 class="post__title">Boosteroid August News</h2>
