--- a/src/index.html
+++ b/src/index.html
@@ -43,17 +43,7 @@
 
 		@@include("html/footer.html", {})
 	</div>
-	<div class="cookie">
-		<button class="cookie__close"></button>
-		<div class="cookie__container">
-			<h4 class="cookie__title">We value your privacy</h4>
-			<p class="cookie__text">This website uses cookies necessary to maintain its functionality, improve your experience and our services.</p>
-			<p class="cookie__text">By clicking Allow or dismissing this banner, you accept our <a href="#">Cookie Policy</a> and <a href="#">Privacy Policy</a>.</p>
-		</div>
-		<div class="cookie__allow">
-			<button class="cookie__btn second-btn">Allow</button>
-		</div>
-	</div>
+	@@include("html/cookiePopUp.html", {})
 	<div class="banner" style="max-height: 100%;">
 		<button class="banner__button"></button>
 		<a href="#" class="banner-link">
