add content and fix company section

--- a/src/html/plan.html
+++ b/src/html/plan.html
@@ -12,11 +12,11 @@
 					<p class="plan-card__title-chip">recommended</p>
 				</div>
 				<div class="plan-card__price">
-					<p class="plan-card__price-price"><sup>€</sup>7.49</p>
-					<p class="plan-card__price-month">per month</p>
+					<p class="plan-card__price-price"><sup>€</sup>89.89</p>
+					<p class="plan-card__price-month">per year</p>
 				</div>
 				<div class="plan-card__footer">
-					<span><sup>€</sup>89.89</span>annually as one payment
+					<span><sup>€</sup>7.49</span>cost per month
 				</div>
 			</div>
 
@@ -29,9 +29,9 @@
 					<p class="plan-card__price-price"><sup>€</sup>9.89</p>
 					<p class="plan-card__price-month">per month</p>
 				</div>
-				<div class="plan-card__footer">
+				<!-- <div class="plan-card__footer">
 					<span><sup>€</sup>9.89</span>each month as one payment
-				</div>
+				</div> -->
 			</div>
 		</div>
 
@@ -54,11 +54,13 @@
 				Core features
 			</h5>
 			<ul class="plan__features-list">
-				<li class="plan__features-item">Unlimited access to vast games library</li>
-				<li class="plan__features-item">No ads or in-game purchases</li>
-				<li class="plan__features-item">New games added every week</li>
-				<li class="plan__features-item">Start playing on one device, and pick it up again later on another</li>
-				<li class="plan__features-item">Compatible with Xbox One Bluetooth wireless controllers</li>
+				<li class="plan__features-item">Access to the whole game catalog</li>
+				<li class="plan__features-item">Unlimited gaming session time</li>
+				<li class="plan__features-item">1080p 60 fps and more</li>
+				<li class="plan__features-item">Access to games on all compatible devices (PC, Mac, laptop, tablet, phone or TV)</li>
+				<li class="plan__features-item">Compatible with many popular gamepads (Xbox series X, S, Xbox One, PS4, etc.) </li>
+				<li class="plan__features-item">Everything is secure, we don’t share your data with anyone</li>
+				<li class="plan__features-item">No lock-in contract, no ads</li>
 			</ul>
 		</div>
 	</div>
