--- a/src/html/section-platform.html
+++ b/src/html/section-platform.html
@@ -5,21 +5,21 @@
 				<h2 class="platform__title title title-effect" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>CLOUD GAMING PLATFORM</h2>
 				<div class="platform__cards">
 					<div class="platform__cards-item">
-						AAA games <br> on weak harware
+						Run PC games <br> on any device
 					</div>
 					<div class="platform__cards-item">
-						Tired of downloads? <br> Play in browser
+						No downloads! <br> Play in browser
 					</div>
 				</div>
 				<div class="platform__price">
 					<h4 class="platform__price-title">
-						lowest price on the market
+						settings high — Prices low
 					</h4>
 					<p class="platform__price-price">
 						From <span><sup>€</sup>7.49</span><span>€14.99</span>
 					</p>
 					<p class="platform__price-subscription">
-						per month for an annual subscription
+						per month with annual subscription
 					</p>
 				</div>
 				<div class="platform__button">
