--- a/src/html/unlimited.html
+++ b/src/html/unlimited.html
@@ -2,7 +2,10 @@
 	<div class="container">
 		<div class="unlimited__title title-effect" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>
 			<h3 class="unlimited__title-title subtitle">Unlimited AAA gaming</h3>
-		<p class="unlimited__title-note">Even on weak devices! PC, Mac, Laptop, Tablet, Android TV. Gaming Everywhere!</p>
+			<div class="unlimited__title-note">
+				<p>Run PC games on low-end, outdated or ultra portable devices!</p>
+				<p>Play on Mac, Linux, iOS, Android, ChromeOS or smart TVs without console</p>
+			</div>
 		</div>
 		<div class="unlimited__wrap">
 			<div class="unlimited__right-border">
@@ -21,15 +24,15 @@
 							<ul class="swiper-slide__container-list">
 								<li class="swiper-slide__container-item">
 									<span>1</span> 
-									<p>Create an account on the Boosteroid website</p>
+									<p>Sign up for Boosteroid</p>
 								</li>
 								<li class="swiper-slide__container-item">
 									<span>2</span> 
-									<p>Purchase a Boosteroid subscription</p> 
+									<p>Subscribe</p> 
 								</li>
 								<li class="swiper-slide__container-item">
 									<span>3</span>
-									<p>Pick a game and play instantly!</p> 
+									<p>Pick a game, log into game account and play!</p> 
 								</li>
 							</ul>
 						</div>
@@ -46,7 +49,7 @@
 									<img src="@img/unlimited__layout_1.svg" alt="image" width="211" height="128">
 								</div>
 								<div class="devices__text">
-									Even on weak devices! PC, Mac, Laptop, Tablet, Android TV. Gaming Everywhere! Even on weak devices! PC, Mac, Laptop, Tablet, Android TV. Gaming Everywhere! Even on weak devices!
+									Enjoy our apps for Windows PC, Mac, and Linux (Ubuntu, Mint, Debian, Fedora). Run hundreds of PC games on any device close at hand!
 								</div>
 							</div>
 							<ul class="devices__links">
@@ -61,7 +64,7 @@
 												</svg>
 										</span>
 										<span class="btn-with-icon__name">
-											<span>Download App for</span>
+											<span>Download for</span>
 											<span>Windows</span>
 										</span>
 									</a>
@@ -74,7 +77,7 @@
 												</svg>												
 										</span>
 										<span class="btn-with-icon__name">
-											<span>Download App for</span>
+											<span>Download for</span>
 											<span>Mac OS</span>
 										</span>
 									</a>
@@ -92,8 +95,24 @@
 												</svg>
 										</span>
 										<span class="btn-with-icon__name">
-											<span>Download App for</span>
+											<span>Download for</span>
 											<span>Linux</span>
+										</span>
+									</a>
+								</li>
+								<li class="devices__item">
+									<a href="downloads/index.html" class="devices__item-link btn-with-icon">
+										<span class="btn-with-icon__icon">
+											<svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
+												<path d="M10.3477 16.5053C10.3477 19.9055 13.1139 22.6716 16.5142 22.6716C19.9143 22.6716 22.6804 19.9054 22.6804 16.5053C22.6804 13.1051 19.9143 10.3389 16.5142 10.3389C13.1139 10.3389 10.3477 13.1051 10.3477 16.5053Z" fill="white"/>
+												<path d="M30.7155 8.36611C30.7635 8.28161 30.7626 8.17785 30.713 8.09421C29.2767 5.67515 27.2326 3.64884 24.8019 2.23439C22.2966 0.776436 19.4314 0.00585938 16.5165 0.00585938C11.4718 0.00585938 6.77045 2.26977 3.61781 6.21711C3.54824 6.3041 3.53915 6.42474 3.59488 6.52114L8.23976 14.5661C8.28845 14.6505 8.37825 14.7014 8.4739 14.7014C8.48602 14.7014 8.49835 14.7005 8.51058 14.6989C8.61942 14.684 8.70847 14.6048 8.73595 14.4985C9.65184 10.9497 12.8513 8.47128 16.5165 8.47128C16.7439 8.47128 16.9788 8.48167 17.2149 8.50179C17.2226 8.50255 17.2304 8.50287 17.2381 8.50287H30.4804C30.5776 8.50287 30.6674 8.45072 30.7155 8.36611Z" fill="white"/>
+												<path d="M18.9538 24.342C18.8867 24.2551 18.7739 24.2178 18.6676 24.2472C17.9689 24.4417 17.245 24.5403 16.5156 24.5403C13.4168 24.5403 10.5607 22.7228 9.23929 19.9101C9.23604 19.9032 9.23247 19.8965 9.22868 19.8898L2.60272 8.41357C2.55446 8.32971 2.46509 8.27832 2.36847 8.27832C2.36804 8.27832 2.3675 8.27832 2.36706 8.27832C2.2699 8.27886 2.18043 8.33134 2.13282 8.41595C0.747792 10.8736 0.015625 13.6711 0.015625 16.5058C0.015625 20.4826 1.45031 24.3239 4.05537 27.3221C6.63456 30.2905 10.1854 32.244 14.0539 32.8229C14.0674 32.8249 14.0808 32.8258 14.0941 32.8258C14.1896 32.8258 14.2794 32.7749 14.3282 32.6905L18.9743 24.6431C19.0293 24.5479 19.0211 24.4288 18.9538 24.342Z" fill="white"/>
+												<path d="M31.6284 10.3076H22.3263C22.2163 10.3076 22.1173 10.3742 22.0759 10.4759C22.0344 10.5776 22.0585 10.6944 22.1369 10.7712C23.6933 12.297 24.5505 14.3335 24.5505 16.5057C24.5505 18.15 24.0543 19.7325 23.1155 21.0822C23.1111 21.0884 23.1071 21.0948 23.1033 21.1014L16.4659 32.5976C16.4173 32.6817 16.4177 32.7855 16.4667 32.8695C16.5152 32.9524 16.6042 33.0033 16.7002 33.0033C16.7011 33.0033 16.7022 33.0033 16.7032 33.0033C21.0711 32.9546 25.1699 31.2169 28.2444 28.1104C31.3214 25.0014 33.016 20.8801 33.016 16.5057C33.016 14.4265 32.6339 12.399 31.8802 10.4793C31.8395 10.3757 31.7396 10.3076 31.6284 10.3076Z" fill="white"/>
+											</svg>
+										</span>
+										<span class="btn-with-icon__name">
+											<span>Download for</span>
+											<span>Chromebook</span>
 										</span>
 									</a>
 								</li>
@@ -107,11 +126,11 @@
 									<img src="@img/unlimited__layout_2.svg" alt="image" width="211" height="128">
 								</div>
 								<div class="devices__text">
-									Even on weak devices! PC, Mac, Laptop, Tablet, Android TV. Gaming Everywhere! Even on weak devices! PC, Mac, Laptop, Tablet, Android TV. Gaming Everywhere! Even on weak devices!
+									Enjoy PC games on TV without a console. Grab a gamepad and play on a big screen! 
 								</div>
 							</div>
 							<ul class="devices__links devices__center">
-								<li class="devices__item text-md-left-xl-center">
+								<li class="devices__item">
 									<a href="https://play.google.com/store/apps/details?id=com.boosteroidtv.streaming" target="_blank" class="devices__item-link btn-with-icon">
 										<span class="btn-with-icon__icon icon-android">
 											<svg width="22" height="25" viewBox="0 0 22 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -122,12 +141,16 @@
 												</svg>
 										</span>
 										<span class="btn-with-icon__name">
-											<span>Download App for</span>
+											<span>Download for</span>
 											<span>Android TV</span>
 										</span>
 									</a>
 								</li>
 							</ul>
+							<div class="devices__description">
+								<p>Look for Boosteroid App in your <span>Samsung</span> and <span>LG</span> application stores</p>
+							</div>
+							
 						</div>
 					</div>
 					<div class="swiper-slide devices">
@@ -137,11 +160,11 @@
 									<img class="devices__image-beta" src="@img/unlimited__layout_3.svg" alt="image" width="211" height="128">
 								</div>
 								<div class="devices__text">
-									Even on weak devices! PC, Mac, Laptop, Tablet, Android TV. Gaming Everywhere! Even on weak devices! PC, Mac, Laptop, Tablet, Android TV. Gaming Everywhere! Even on weak devices!
+									PC games on a smartphone? Why not! Play wherever you are no matter if you don’t have a computer around.
 								</div>
 							</div>
 							<ul class="devices__links devices__center">
-								<li class="devices__item text-md-left-xl-center">
+								<li class="devices__item">
 									<a href="https://play.google.com/store/apps/details?id=com.boosteroid.streaming" target="_blank" class="devices__item-link btn-with-icon">
 										<span class="btn-with-icon__icon icon-android">
 											<svg width="22" height="25" viewBox="0 0 22 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -152,8 +175,8 @@
 											</svg>
 										</span>
 										<span class="btn-with-icon__name">
-											<span>Download App for</span>
-											<span>Android</span>
+											<span>Download for</span>
+											<span>Android Mobile</span>
 										</span>
 									</a>
 								</li>
@@ -185,12 +208,9 @@
 		<ul class="unlimited__footer-list" data-scroll data-scroll-class="fade-effect-off" data-scroll-repeat="true">
 			<li class="unlimited__footer-item">
 				<p class="unlimited__footer-item-img">
-					<svg width="67" height="67" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M67 0L30 5.27394V32L67 31.7131V0Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						<path d="M27 62L26.979 35.1799L0 35L0.00151379 58.1824L27 62Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						<path d="M66.9913 67L67 36.0579L30 36L30.0518 62.0014L66.9913 67Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						<path d="M0 8.78978L26.9882 5L27 31.8416L0.0246537 32L0 8.78978Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						</svg>
+					<svg>
+						<use href="@img/sprites/sprite.svg#window"></use>
+					</svg>
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>Windows</span>
@@ -200,26 +220,21 @@
 
 			<li class="unlimited__footer-item">
 				<p class="unlimited__footer-item-img">
-					<svg width="68" height="67" viewBox="0 0 68 67" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M52.6372 64.3019C49.0356 67.8288 45.0618 67.279 41.2742 65.6161C37.2473 63.9197 33.5659 63.8125 29.3131 65.6161C24.017 67.9227 21.2062 67.2522 18.0166 64.3019C0.00857956 45.5947 2.66659 17.098 23.1333 16.0252C28.0971 16.2934 31.5724 18.7944 34.4962 19.0023C38.8421 18.1105 43.0019 15.5558 47.6534 15.8911C53.2419 16.347 57.4216 18.5731 60.2125 22.5761C48.7166 29.5494 51.4411 44.837 62 49.1283C59.8869 54.727 57.1757 60.2587 52.6305 64.3489L52.6372 64.3019ZM34.0975 15.824C33.5593 7.50971 40.2376 0.67051 47.9192 0C48.9758 9.5883 39.2807 16.7628 34.0975 15.824Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						</svg>
+					<svg>
+						<use href="@img/sprites/sprite.svg#apple"></use>
+					</svg>
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>Apple</span>
-					<span>Browser</span>
+					<span>Browser & App</span>
 				</p>
 			</li>
 
 			<li class="unlimited__footer-item">
 				<p class="unlimited__footer-item-img">
-					<svg width="67" height="67" viewBox="0 0 67 67" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M7.5 40C11.0899 40 14 37.0899 14 33.5C14 29.9101 11.0899 27 7.5 27C3.91015 27 1 29.9101 1 33.5C1 37.0899 3.91015 40 7.5 40Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						<path d="M54.5 67C58.0899 67 61 64.0899 61 60.5C61 56.9101 58.0899 54 54.5 54C50.9101 54 48 56.9101 48 60.5C48 64.0899 50.9101 67 54.5 67Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						<path d="M54.5 13C58.0899 13 61 10.0899 61 6.5C61 2.91015 58.0899 0 54.5 0C50.9101 0 48 2.91015 48 6.5C48 10.0899 50.9101 13 54.5 13Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						<path d="M38.6758 17.1265C46.8493 17.1265 53.6307 23.1677 54.7537 31H66C65.4892 24.8456 62.9258 19.1094 58.6402 14.5856C55.8955 15.9771 52.5206 16.0036 49.6537 14.3565C46.7845 12.7072 45.1198 9.78258 44.96 6.71756C42.9233 6.24492 40.819 6 38.6758 6C34.5721 6 30.6065 6.89158 27 8.58235L32.6303 18.2895C34.5001 17.5404 36.5405 17.1265 38.6758 17.1265V17.1265Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						<path d="M22.879 33.5007C22.879 28.3299 25.2754 23.7169 29 20.7429L23.4545 11C22.1539 11.9216 20.9235 12.9647 19.7774 14.1264C16.568 17.3814 14.2666 21.3115 13 25.601C15.5516 27.2774 17.2413 30.1874 17.2413 33.5007C17.2413 36.8133 15.5516 39.724 13 41.3997C14.2666 45.6892 16.568 49.6193 19.7774 52.8743C20.9227 54.036 22.1518 55.0777 23.4517 56L28.9979 46.2564C25.2739 43.2824 22.879 38.6694 22.879 33.5007Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						<path d="M54.7558 36C53.6357 43.8329 46.8532 49.876 38.678 49.876C36.5414 49.876 34.5004 49.4622 32.6307 48.7119L27 58.417C30.6056 60.108 34.5724 61 38.6773 61C40.8218 61 42.9289 60.7537 44.9662 60.2812C45.1231 57.2135 46.7885 54.2846 49.6596 52.6352C52.5271 50.9871 55.9032 51.0136 58.6485 52.4075C62.9303 47.8843 65.4907 42.1505 66 36H54.7558V36Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						</svg>
+					<svg>
+						<use href="@img/sprites/sprite.svg#linux"></use>
+					</svg>
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>Linux</span>
@@ -229,17 +244,49 @@
 
 			<li class="unlimited__footer-item">
 				<p class="unlimited__footer-item-img">
-					<svg width="68" height="67" viewBox="0 0 68 67" fill="none" xmlns="http://www.w3.org/2000/svg">
-						<path d="M9.51908 22C8.40024 22 7.45095 22.4094 6.67062 23.2281C5.89028 24.0469 5.5 25.0294 5.5 26.1761V43.7823C5.5 44.9577 5.89017 45.9529 6.67062 46.7717C7.45095 47.5905 8.40024 48 9.51908 48C10.6371 48 11.5806 47.5906 12.3489 46.7717C13.1156 45.953 13.5 44.9577 13.5 43.7823V26.1761C13.5 25.0292 13.1098 24.0469 12.3294 23.2281C11.5489 22.4094 10.612 22 9.51908 22Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						<path d="M43.0997 5.86141L45.9399 0.843218C46.1263 0.510993 46.06 0.256233 45.7403 0.077094C45.3933 -0.0773757 45.1267 0.000896605 44.9404 0.306378L42.0606 5.36469C39.5265 4.29158 36.8464 3.75405 34.0201 3.75405C31.1932 3.75405 28.5128 4.2917 25.9797 5.36469L23.0998 0.306378C22.9126 0.000896605 22.646 -0.0766841 22.2999 0.077094C21.9795 0.25704 21.9132 0.510993 22.1003 0.843218L24.9406 5.86141C22.0606 7.26812 19.7669 9.22724 18.0603 11.743C16.3537 14.2602 15.5 17.0109 15.5 20H52.5C52.5 17.0116 51.6462 14.2608 49.9397 11.743C48.233 9.22724 45.9525 7.26812 43.0997 5.86141ZM26.6795 13.1604C26.3723 13.4553 26.0055 13.6021 25.5791 13.6021C25.1518 13.6021 24.7924 13.4553 24.4992 13.1604C24.2061 12.867 24.0595 12.517 24.0595 12.1072C24.0595 11.6988 24.2061 11.3481 24.4992 11.0539C24.7924 10.7604 25.1526 10.6137 25.5791 10.6137C26.0055 10.6137 26.3723 10.7604 26.6795 11.0539C26.9859 11.3488 27.1398 11.6988 27.1398 12.1072C27.139 12.5163 26.9852 12.867 26.6795 13.1604ZM43.5394 13.1604C43.2456 13.4553 42.8854 13.6021 42.4597 13.6021C42.0323 13.6021 41.6656 13.4553 41.3591 13.1604C41.052 12.867 40.8988 12.517 40.8988 12.1072C40.8988 11.6988 41.052 11.3481 41.3591 11.0539C41.6656 10.7604 42.0323 10.6137 42.4597 10.6137C42.8861 10.6137 43.2455 10.7604 43.5394 11.0539C43.8328 11.3488 43.9792 11.6988 43.9792 12.1072C43.9792 12.5163 43.8327 12.867 43.5394 13.1604Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						<path d="M16.5 49.4951C16.5 50.7162 16.9181 51.7499 17.7543 52.5982C18.5913 53.4465 19.6103 53.8706 20.8133 53.8706H23.7156L23.7553 62.9021C23.7553 64.0426 24.1474 65.011 24.9317 65.8066C25.7159 66.6022 26.6576 67 27.7552 67C28.8789 67 29.8335 66.6022 30.6179 65.8066C31.4022 65.011 31.7943 64.0427 31.7943 62.9021V53.8714H37.2062V62.9021C37.2062 64.0426 37.5982 65.011 38.3825 65.8066C39.1668 66.6022 40.1206 67 41.2451 67C42.3688 67 43.3234 66.6022 44.1077 65.8066C44.8921 65.011 45.2841 64.0427 45.2841 62.9021V53.8714H48.2255C49.4018 53.8714 50.4078 53.4472 51.2456 52.5989C52.0817 51.7507 52.5 50.717 52.5 49.4959V23H16.5V49.4951Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						<path d="M57.9782 22C56.7484 22 55.695 22.4033 54.8169 23.2078C53.939 24.0137 53.5 25.0037 53.5 26.1761V43.7823C53.5 44.9577 53.9388 45.9529 54.8169 46.7717C55.695 47.5906 56.7492 48 57.9782 48C59.2362 48 60.305 47.5906 61.1831 46.7717C62.0611 45.9529 62.5 44.9577 62.5 43.7823V26.1761C62.5 25.0036 62.0611 24.0137 61.1831 23.2078C60.305 22.4033 59.2362 22 57.9782 22Z" fill="#FFFDF8" fill-opacity="0.5"/>
-						</svg>
-						
+					<svg>
+						<use href="@img/sprites/sprite.svg#android"></use>
+					</svg>
 				</p>
 				<p class="unlimited__footer-item-txt">
 					<span>Android</span>
-					<span>TV & Mobile App</span>
+					<span>TV & Mobile App, Browser</span>
+				</p>
+			</li>
+
+			<li class="unlimited__footer-item">
+				<p class="unlimited__footer-item-img">
+					<svg>
+						<use href="@img/sprites/sprite.svg#chromius"></use>
+					</svg>
+				</p>
+				<p class="unlimited__footer-item-txt">
+					<span>ChromeOS</span>
+					<span>Chromebook Web App</span>
+				</p>
+			</li>
+
+			<li class="unlimited__footer-item">
+				<p class="unlimited__footer-item-img">
+					<svg>
+						<use href="@img/sprites/sprite.svg#samsung"></use>
+					</svg>
+				</p>
+				<p class="unlimited__footer-item-txt">
+					<span>Tizen</span>
+					<span>Samsung TV App</span>
+				</p>
+			</li>
+
+			<li class="unlimited__footer-item">
+				<p class="unlimited__footer-item-img">
+					<svg>
+						<use href="@img/sprites/sprite.svg#LG"></use>
+					</svg>
+				</p>
+				<p class="unlimited__footer-item-txt">
+					<span>WebOS</span>
+					<span>LG TV App</span>
 				</p>
 			</li>
 		</ul>
