--- a/src/html/begin.html
+++ b/src/html/begin.html
@@ -6,7 +6,7 @@
 				<ul class="begin__list"> 
 					<!-- data-scroll data-scroll-speed="2" data-scroll-delay="0.11" data-scroll-direction="horizontal" -->
 					<li class="begin__item">
-						<svg width="34" height="31" viewBox="0 0 34 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<svg viewBox="0 0 34 31" xmlns="http://www.w3.org/2000/svg">
 							<path d="M2.25843 25.9196H11.5039V28.4079H9.70417C9.38658 28.4079 9.17486 28.6498 9.17486 28.9263V30.4815C9.17486 30.7926 9.42187 30.9999 9.70417 30.9999H18.4203C18.7379 30.9999 18.9496 30.758 18.9496 30.4815V28.9263C18.9496 28.6153 18.7026 28.4079 18.4203 28.4079H16.6206V25.9196H25.866C27.1364 25.9196 28.1245 24.9173 28.1245 23.7077V18.0398H25.0191V22.8782H3.10534V8.91583H13.7976V5.87451H2.25843C0.988061 5.87451 0 6.87676 0 8.08638V23.7077C0 24.9519 1.02335 25.9196 2.25843 25.9196Z" fill="url(#paint0_linear_1904_971)"/>
 							<path d="M19.62 11.0931L15.1031 14.0653C14.8914 14.2035 14.8914 14.5146 15.1031 14.6528L19.62 17.625C19.867 17.7978 20.1846 17.625 20.1846 17.314V15.6896H31.3709C32.1472 15.6896 32.7824 15.0675 32.7824 14.3072V6.70391C32.7824 6.53111 32.6059 6.42743 32.4648 6.53111L30.2769 7.98265C30.1005 8.08633 29.9946 8.29369 29.9946 8.4665V12.9594H20.1846V11.335C20.1846 11.1277 19.867 10.9548 19.62 11.0931Z" fill="url(#paint1_linear_1904_971)"/>
 							<path d="M28.7599 0.379516V2.00386H17.5736C16.7973 2.00386 16.1621 2.62594 16.1621 3.38627V10.9896C16.1621 11.1624 16.3385 11.2661 16.4797 11.1624L18.6676 9.71083C18.844 9.60715 18.9499 9.39979 18.9499 9.22698V4.73413H28.7599V6.35847C28.7599 6.63495 29.0775 6.80775 29.3245 6.66951L33.8414 3.69732C34.0531 3.55907 34.0531 3.24803 33.8414 3.10979L29.3245 0.0684719C29.0775 -0.10433 28.7599 0.0684718 28.7599 0.379516Z" fill="url(#paint2_linear_1904_971)"/>
@@ -24,8 +24,8 @@
 							<stop offset="1" stop-color="#5C35EE"/>
 							</linearGradient>
 							</defs>
-							</svg>
-							<p>No more hardware updates</p>
+						</svg>
+							<p>Powerful gaming rig on-demand</p>
 					</li>
 					<li class="begin__item">
 						<svg width="36" height="30" viewBox="0 0 36 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -42,7 +42,7 @@
 							</linearGradient>
 							</defs>
 							</svg>
-							<p>No more downloads</p>
+							<p>No downloads</p>
 					</li>
 					<li class="begin__item">
 						<svg width="38" height="26" viewBox="0 0 38 26" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -59,7 +59,7 @@
 							</linearGradient>
 							</defs>
 							</svg>
-							<p>Play your favorite games even in browser</p>
+							<p>Play in browser and on any devices</p>
 					</li>
 				</ul>
 				<div class="begin__btn">
