--- a/src/html/gaming.html
+++ b/src/html/gaming.html
@@ -1,6 +1,6 @@
 <section class="gaming" data-scroll-section>
 	<div class="container">
-		<h3 class="gaming__title subtitle title-effect" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>More than just gaming</h3>
+		<h3 class="gaming__title subtitle title-effect" data-scroll-repeat="true" data-scroll-class="title-effect-off" data-scroll>Plenty of cool stuff</h3>
 		<div class="gaming__cards">
 			<article class="gaming__card" data-scroll data-scroll-speed="3" data-scroll-delay="0.43" data-scroll-direction="horizontal">
 				<div class="gaming__image">
@@ -8,7 +8,7 @@
 				</div>
 				<div class="gaming__content">
 					<h4 class="gaming__content-title">24/4 Support</h4>
-					<p class="gaming__content-text">Response within 1-2 minutes. </p>
+					<div class="gaming__content-text"><p>Online chat.</p><p>Response in 1-2 minutes </p></div>
 				</div>
 			</article>
 			<article class="gaming__card" data-scroll data-scroll-speed="2">
@@ -16,8 +16,8 @@
 					<img src="@img/gaming_devices.svg" alt="image card" width="221" height="140">
 				</div>
 				<div class="gaming__content">
-					<h4 class="gaming__content-title">Stream switching</h4>
-					<p class="gaming__content-text">Switch from device to device.</p>
+					<h4 class="gaming__content-title">Switching Devices</h4>
+					<p class="gaming__content-text">Start playing on one device, <br> continue on another</p>
 				</div>
 			</article>
 			<article class="gaming__card" data-scroll data-scroll-speed="-3" data-scroll-delay="0.43" data-scroll-direction="horizontal">
@@ -25,14 +25,14 @@
 					<img src="@img/gaming_stream.svg" alt="image card" width="221" height="140">
 				</div>
 				<div class="gaming__content">
-					<h4 class="gaming__content-title">Games Streaming</h4>
-					<p class="gaming__content-text">Coming soon.</p>
+					<h4 class="gaming__content-title">Gameplay Streaming</h4>
+					<p class="gaming__content-text">Stream your gameplay to <br> YouTube! Coming in 2023</p>
 				</div>
 			</article>
 		</div>
-		<p class="gaming__note">WANT TO KNOW MORE? LEARN ABOUT OUR TECHNOLOGY</p>
+		<!-- <p class="gaming__note">WANT TO KNOW MORE? LEARN ABOUT OUR TECHNOLOGY</p>
 		<div class="gaming__button">
 			<button class="basic-button gaming__button-btn">TAKE A LOOK</button>
-		</div>
+		</div> --> <!-- *Old content -->
 	</div>
 </section>
